--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,25 @@
 <!DOCTYPE html>
-<html lang="FR">
+<html lang="FR-fr">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/tremplin.png"/>
     <script src="https://kit.fontawesome.com/ea82f7662d.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>BENGAL</title>
+    <link rel="Tremplin" href="https://www.mon-tremplin.fr"/>
+    <meta name="entrepreneuriat" content="balise meta, mots-clés, entrepreneuriat">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="description" 
+      content="Nous avons créé une plateforme/qui facilite l’accessibilité à l’entrepreneuriat 
+      grace à deux leviers. Menée principalement par un site proposant des astuces et des conseils 
+      qui donnerait des clés simples et claires pour pousser à se lancer dans l’entrepreneuriat.
+      De plus pour faciliter l’apprentissage, une chaîne Youtube avec plein de tutos et d’exemple 
+      d’entrepreneuriat à succès. Nous croyons en un entrepreneuriat accessible à tous. 
+      Notre but est de vous prouver qu’avec les bonnes ressources et les bons outils en mains, 
+      rien ne peut vous arrêter."/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <title>Tremplin</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
