--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,15 @@
     <title>Tremplin</title>
   </head>
   <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KDJPPX1PDG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KDJPPX1PDG');
+</script>
     <div id="root"></div>
   </body>
 </html>
